[package]
name = "cryptan"
version = "0.1.0"
edition = "2021"
authors = ["Tanuki"]
license = "Apache-2.0"
description = "A simple crypto playground (Caesar, Morse, ...)."
repository = "https://github.com/YaseiTanuki/Cryptan"
readme = "README.md"
keywords = ["crypto", "cipher", "caesar"]
categories = ["cryptography", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize", "abi3-py37"], optional = true }
clap = { version = "4", features = ["derive"] }
colored = "2.0"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "caesar"
path = "src/main.rs"

[features]
python = ["pyo3"]
