[package]
name = "cryptan"
version = "0.4.0"
edition = "2021"
authors = ["Tanuki"]
license = "Apache-2.0"
description = "A simple crypto playground (Caesar, Morse, ...)."
repository = "https://github.com/YaseiTanuki/Cryptan"
readme = "README.md"
keywords = ["YaseiTanuki", "crypto", "cipher", "caesar", "morse", "cryptan", "encryption", "decryption", "brute-force"]
categories = ["cryptography", "encoding"]
include = [
    "src/**",
    "public/**",
    "Cargo.toml",
    "README.md",
    "DISCLAIMER.md",
    "RESPONSIBLE_USE.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2.0"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "cryptan"
path = "src/main.rs"